k8s/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: nexora-global
  namespace: microservices-demo
  annotations:
    networking.gke.io/certmap: nexora-mooo-cert-map
spec:
  addresses:
    - type: NamedAddress
      value: nexora-global-ip
  gatewayClassName: gke-l7-global-external-managed
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same

    - name: https
      port: 443
      protocol: HTTPS
      hostname: nexora-cloud.mooo.com
      allowedRoutes:
        namespaces:
          from: Same
